--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-body {
-    background-color: blue
+.btn {
+    background-color: rgb(74, 7, 100);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+
 }
