--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@
 #inputShowScore{
     border: none;
     border-bottom: black solid 2px;
+    width: 96%;
+    display: block;
+    margin: 0 auto;
     
 }
 .btn:hover{
@@ -28,4 +31,8 @@
 #inputShowScore{
     border-bottom: purple solid 2px;
     outline: none;
+}
+#all{
+    width: 50%;
+    margin: 0 auto;
 }
